--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,9 @@ body{
     opacity: 0.5;
 }
 .city{
-    font-size: 38px;
-    line-height:48px ;
+    font-size: 40px;
+    line-height:48px;
+    font-weight: bold;
 }
 
 .submit-input{
@@ -31,6 +32,7 @@ border-radius:5px;
 border: none;
 padding: 15px;
 width: 18%;
+cursor: pointer;
 background-color: rgb(255, 0, 68);
 color:rgba(0, 0, 0, 0.806);
 font-size: 18px;
@@ -41,8 +43,7 @@ footer{
     font-size: small;
     border-top: 1px solid rgba(0, 0, 128, 0.858);
     margin-top: 200px;
-    
-    
+       
 }
 
 a{
@@ -53,26 +54,27 @@ a{
 .description{
     display: flex;
     justify-content: end;
-     margin-top: -65px;   
-
+     margin-top: -85px;   
 }
 
-.description .temp{
-    font-size: 40px;
+ .temp{
+    font-size: 55px;
+    font-weight: bold;
 }
 
-.description .unit{
-    font-size: 20px;
+ .unit{
+    font-size: 30px;
     position: relative;
-    top: -10px;   
+    bottom: -10px;   
 }
 .description .icon{
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .humidity span{
     color:rgb(255, 0, 68);
 }
+
 
 .weather-city{
     font-size: 16px;    
@@ -93,7 +95,7 @@ border-radius: 50px;
 
 
 .weather-forecast-icon{
-    font-size: 30px ;
+    font-size: 40px ;
 }
 
 .weather-forecast-min{
