--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
-
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   background-image: url("../images/stars.jpg");
@@ -16,13 +20,13 @@ body {
 }
 
 .weather-app-details {
-  line-height: 25px;
+  line-height: 30px;
 }
 
 .search-input {
   border-radius: 10px;
   border: none;
-  margin: 20px 10px;
+  margin: 15px 10px;
   padding: 15px 15px;
   width: 70%;
   font-size: 18px;
@@ -50,7 +54,7 @@ footer {
   text-align: center;
   font-size: small;
   border-top: 1px solid rgba(0, 0, 128, 0.858);
-  margin-top: 200px;
+  margin-top: 150px;
 }
 
 a {
@@ -108,28 +112,24 @@ a {
   color: rgba(0, 0, 0, 0.856);
   padding: 5px 15px;
   border-radius: 50px;
-  width: 40px;
+  width:40px;
   height: 40px;
-  text-align: center;
-  
+  text-align: center; 
 }
 
 .weather-forecast-icon {
-  font-size: 40px;
-    
-    
+  font-size: 45px;
+  margin-top: 40px;
+
+     
 }
-
-.weather-icon-info {
-    
-
-
-} 
 
 .weather-forecast-min {
   font-size: 18px;
   font-weight: bold;
   color: rgb(255, 0, 68);
+  margin-top: 15px;
+  padding: 10px;
 }
 
 .weather-forecast-max {
@@ -143,6 +143,7 @@ a {
     text-align: center;
   }
 }
+
 
 @media (max-width: 360px) {
   .submit-input {
@@ -159,3 +160,4 @@ a {
     width: 30%;
   }
 }
+
